Fix z-index references

--- a/src/styles/containers/_card.scss
+++ b/src/styles/containers/_card.scss
@@ -1,6 +1,6 @@
 .card {
   position: absolute;
-  z-index: var(--z-fullscreen-overlay);
+  z-index: var(--z-modal);
   top: 0;
   left: 0;
   width: 100%;
